[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/assets/sprites/background-day.png" type="Texture" id=1]
[ext_resource path="res://Bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level.gd" type="Script" id=3]
[ext_resource path="res://resources/assets/audio/wing.wav" type="AudioStream" id=4]
[ext_resource path="res://Pipe.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/assets/sprites/base.png" type="Texture" id=7]

[node name="Level" type="Node2D"]
script = ExtResource( 3 )
pipe = ExtResource( 5 )

[node name="Bird" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 360 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 200, 360 )
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="background-day" type="Sprite" parent="."]
position = Vector2( 200, 360 )
z_index = -1
texture = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="PipePosition" type="Position2D" parent="."]
position = Vector2( 344, 480 )

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 200, 360 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="base" type="Sprite" parent="."]
position = Vector2( 200, 560 )
texture = ExtResource( 7 )

[node name="Flap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="hit" from="Bird" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_PipeTimer_timeout"]
